# openclaw-codeagent-gateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  gateway.yaml.example  opencode-config.example.json
migrations/: 001_init.sql
skill/: SKILL.md
skill/references/: api-reference.md  configuration.md
skill/scripts/: agw-client.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: admin.rs  handlers.rs  health.rs  middleware.rs  mod.rs  router.rs  stream.rs
src/auth/: audit.rs  identity.rs  mod.rs  policy.rs  quota.rs  tenant.rs
src/dispatch/: formatter.rs  mod.rs  webhook.rs
src/observability/: metrics.rs  mod.rs  tracing_setup.rs
src/runtime/: event.rs  mod.rs  pool.rs  process.rs  protocol.rs  pty.rs
src/scheduler/: executor.rs  job.rs  mod.rs  patrol.rs  store.rs
tests/: integration.rs
