[package]
name = "agent-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dashmap = "6"
nix = { version = "0.29", features = ["signal", "process"] }
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
async-stream = "0.3"
tokio-stream = "0.1"
regex = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
